force-app/main/default/objects/Channel_Contact_Point_Mapping__mdt.object
<CustomObject>
    <description>Channel to Contact Point Mapping Break down</description>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Monash</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <description>Source Field to Map</description>
        <label>SourceField</label>
        <metadataRelationshipControllingField>Channel_Contact_Point_Mapping__mdt.SourceObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Channel_Contact_Point_Mappings1</relationshipLabel>
        <relationshipName>Channel_Contact_Point_Mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SourceObject__c</fullName>
        <description>Source Object of Mapping</description>
        <label>SourceObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Channel_Contact_Point_Mappings1</relationshipLabel>
        <relationshipName>Channel_Contact_Point_Mappings1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <description>Target Field to Map from Target Object</description>
        <label>TargetField</label>
        <metadataRelationshipControllingField>Channel_Contact_Point_Mapping__mdt.TargetObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Channel_Contact_Point_Mappings</relationshipLabel>
        <relationshipName>Channel_Contact_Point_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <description>Target SObject to Rolldown</description>
        <label>TargetObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Channel_Contact_Point_Mappings</relationshipLabel>
        <relationshipName>Channel_Contact_Point_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type Mapping</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                    <default>true</default>
                    <label>Mobile</label>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Postal</fullName>
                    <isActive>false</isActive>
                    <label>Postal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Channel Contact Point Mapping</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Classification__c</columns>
        <columns>SourceField__c</columns>
        <columns>SourceObject__c</columns>
        <columns>TargetField__c</columns>
        <columns>TargetObject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <pluralLabel>Channel Contact Point Mappings</pluralLabel>
</CustomObject>